--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
       </span>
     </ion-title>
     <ion-buttons right>
-      <button ion-button color="primary" icon-only (tap)="toggleClock()" (press)="ud.updatePerfectlyNormalEvent($event)">
+      <button ion-button color="primary" icon-only (tap)="toggleClock()">
         <!-- <ion-icon class="header-clock-button" name="ion-clock"></ion-icon> -->
         <!-- <span class="header-clock-button">&#xf26e;</span> -->
         <ion-icon class="header-clock-icon" name="ios-clock-outline"></ion-icon>
@@ -29,7 +29,7 @@
 
 <div #fixed ion-fixed></div>
 <ion-content padding [ngStyle]="{'margin-top': fixedHeight}">
-  <div class="waiting-clock" *ngIf="!(dataReady && ud.isHomePageReady())" (tap)="toggleClock()">
+  <div class="waiting-clock" *ngIf="ud.isAppLoaded() && !(dataReady && ud.isHomePageReady())" (tap)="toggleClock()">
     <clock></clock>
   </div>
   <div class="home-header-container" *ngIf="dataReady && ud.isHomePageReady()">
