--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -6,8 +6,12 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>{{title}}</ion-title>
-    <ion-buttons end>
+    <!-- <ion-title>{{title}}</ion-title> -->
+    <ion-title class="app-title">
+      <span class="app-page-title">{{title}}</span>
+      <span class="app-user" *ngIf="ud.getTechName()">{{ud.getTechName()}}</span>
+    </ion-title>
+    <ion-buttons right>
       <button ion-button icon-only (tap)="deleteReport($event, type)" *ngIf="mode=='Edit'">
         <ion-icon class="work-order-delete-button" name="ios-trash-outline"></ion-icon>
       </button>
@@ -29,32 +33,26 @@
           <span class="shift-hours" *ngIf="mode==='Add'">{{selectedShift.getNormalHours()+currentOtherHours}}</span>
           <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()}}</span>
         </span>
-        <!-- <span class="shift-hours" *ngIf="mode==='Edit'">{{selectedShift.getNormalHours()+currentRepairHours-thisWorkOrderContribution}}</span> -->
-        <!-- <span class="shift-hours" *ngIf="mode==='Add'">{{shiftSavedHours+currentRepairHours}}</span>
-        <span class="shift-hours" *ngIf="mode==='Edit'">{{shiftSavedHours+currentRepairHours-thisWorkOrderContribution}}</span> -->
         <span class="shift-label">{{'of' | translate}}</span>
         <span class="shift-length-wrapper" *ngIf="!type || !type.name || type.name === 'work_report'">
           <span class="shift-hours" *ngIf="selectedShift.getShiftLength()==='S'">{{selectedShift.getShiftLength(currentRepairHours)}}</span>
           <span class="shift-hours" *ngIf="selectedShift.getShiftLength()!=='S'">{{selectedShift.getShiftLength()}}</span>
-          <!-- <span class="shift-hours">{{selectedShift.getShiftLength()}}</span> -->
         </span>
         <span class="shift-length-wrapper" *ngIf="type && type.name && type.name !== 'work_report'">
           <span class="shift-hours" *ngIf="selectedShift.getShiftLength()==='S'">{{selectedShift.getShiftLength(currentOtherHours)}}</span>
           <span class="shift-hours" *ngIf="selectedShift.getShiftLength()!=='S'">{{selectedShift.getShiftLength()}}</span>
-          <!-- <span class="shift-hours">{{selectedShift.getShiftLength()}}</span> -->
         </span>
       </span>
     </div>
 
     <form [formGroup]="workOrderForm" (ngSubmit)="onSubmit()" *ngIf="dataReady">
-
       <ion-list padding>
         <ion-item (tap)="checkPageMode($event)">
           <ion-label>{{'report_type' | translate}}</ion-label>
           <!-- <ion-select formControlName="type" [disabled]="mode==='Edit'" (tap)="checkPageMode()"> -->
-          <ion-select formControlName="type" (tap)="checkPageMode()">
-            <ion-option (tap)="checkPageMode()" *ngFor="let type of selReportType" [value]="type">{{type.name | translate}}</ion-option>
-          </ion-select>
+          <ion-select formControlName="type">
+            <ion-option *ngFor="let type of selReportType" [value]="type">{{type.name | translate}}</ion-option>
+          </ion-select>xcsx
         </ion-item>
         <ion-item (tap)="showFancySelect()" class="item item-button ion-item-button-like">
           <ion-label>{{'shift_date' | translate}}</ion-label>
@@ -67,6 +65,10 @@
 <!-- ******************************************************************************************************************************  -->
 <!--WORK REPORT  -->
       <ion-list *ngIf="type.name==='work_report'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{workOrder.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{workOrder._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label>{{'repair_time' | translate}}</ion-label>
           <ion-multi-picker class="repair-hours-picker" item-content [separator]="':'" [multiPickerColumns]="chooseHours" formControlName="repair_time"></ion-multi-picker>
@@ -91,6 +93,10 @@
 
 <!-- TRAVEL  -->
       <ion-list *ngIf="type.name==='travel'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label>{{'travel' | translate}} </ion-label>
           <ion-select formControlName="travel_location">
@@ -105,6 +111,10 @@
 
 <!-- TRAINING  -->
       <ion-list *ngIf="type.name==='training'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label>{{'training' | translate}}</ion-label>
           <ion-select formControlName="training_type">
@@ -119,6 +129,10 @@
 
 <!-- STANDBY (BILLABLE)  -->
       <ion-list *ngIf="type.name==='standby'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label class="report-time-label">{{'standby' | translate}}</ion-label>
           <ion-input class="report-time-input" formControlName="time" type="number" placeholder="8"></ion-input>
@@ -127,6 +141,10 @@
 
 <!-- DUNCAN STANDBY  -->
       <ion-list *ngIf="type.name==='standby_hb_duncan'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label class="report-time-label">{{'standby_hb_duncan' | translate}}</ion-label>
           <ion-input class="report-time-input" formControlName="time" placeholder="8"></ion-input>
@@ -135,6 +153,10 @@
 
 <!-- SICK TIME  -->
       <ion-list *ngIf="type.name==='sick'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p>
+          <p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p>
+        </span>
         <ion-item>
           <ion-label>{{'all_day' | translate}}</ion-label>
           <ion-toggle formControlName="allDay"></ion-toggle>
@@ -147,6 +169,10 @@
 
 <!-- VACATION  -->
       <ion-list *ngIf="type.name==='vacation'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p></span>
+          <span class="report-dev-group"><p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p></span>
+        </span>
         <ion-item>
           <ion-label class="report-time-label">{{'vacation_hours' | translate}}</ion-label>
           <ion-input class="report-time-input" formControlName="time" value="8"></ion-input>
@@ -155,6 +181,10 @@
 
 <!-- HOLIDAY  -->
       <ion-list *ngIf="type.name==='holiday'">
+        <span class="report-dev-info" *ngIf="ud.showID() || ud.showRev()">
+          <p class="report-dev-header" *ngIf="ud.showID()">ID:</p><p class="report-dev-data">{{reportOther.getReportID()}}</p>
+          <p class="report-dev-header" *ngIf="ud.showRev()">Rev:</p><p class="report-dev-data">{{reportOther._rev}}</p>
+        </span>
         <ion-item>
           <ion-label class="report-time-label">{{'holiday_hours' | translate}}</ion-label>
           <ion-input class="report-time-input" formControlName="time" value="8"></ion-input>
