--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="body-with-header-and-tabs">
+<ion-content padding class="page-content message-page-content">
   <ion-card>
     <ion-list no-border>
       <ion-item class="message-header-item message-sender">
