--- a/src/pages/report-history/report-history.html
+++ b/src/pages/report-history/report-history.html
@@ -11,7 +11,7 @@
 <!-- <div #fixed ion-fixed></div>
 <ion-content padding [ngStyle]="{'margin-top': fixedHeight}"> -->
 <!-- <div #fixed ion-fixed></div> -->
-<ion-content padding>
+<ion-content padding class="page-content report-history-page-content">
   <div class="waiting-clock" *ngIf="!pageReady">
     <clock></clock>
   </div>
