--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="page-content settings-page-content">
   <div class="waiting-clock" *ngIf="!dataReady" (tap)="toggleClock()">
     <clock></clock>
   </div>
