--- a/src/pages/comment/comment.html
+++ b/src/pages/comment/comment.html
@@ -1,30 +1,19 @@
-<!--
-  Generated template for the CommentPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Comment</ion-title>
+    <ion-title>{{'comment_title' | translate}}</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
+<ion-content padding class="page-content comment-page-content">
   <ion-card>
     <ion-list>
       <ion-item>
         <ion-label floating>{{'user' | translate}}</ion-label>
         <ion-input class="comment-user" [(ngModel)]="comment.technician"></ion-input>
-        <!-- <span class="comment-data">{{comment.user}}</span> -->
       </ion-item>
       <ion-item>
         <ion-label>{{'message_subject' | translate}}</ion-label>
         <ion-input class="comment-subject" [(ngModel)]="comment.subject"></ion-input>
-        <!-- <span class="comment-data">{{comment.subject}}</span> -->
       </ion-item>
       <ion-item>
         <ion-label floating>{{'comment' | translate}}</ion-label>
