--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -10,7 +10,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="page-content developer-page-content">
   <button ion-button block color="primary" (click)="updatePreferences()">Save</button>
   <button ion-button block color="light" type="button" (click)="cancel()">Cancel</button>
   <ion-item-group>
