--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,30 +9,19 @@
     </ion-title>
     <ion-buttons right>
       <button ion-button color="primary" icon-only (tap)="toggleClock()">
-        <!-- <ion-icon class="header-clock-button" name="ion-clock"></ion-icon> -->
-        <!-- <span class="header-clock-button">&#xf26e;</span> -->
         <ion-icon class="header-clock-icon" name="ios-clock-outline"></ion-icon>
       </button>
       <button ion-button color="primary" icon-only (tap)="showHelp($event)">
         <ion-icon class="header-help-button" name="help-circle"></ion-icon>
       </button>
-      <!-- <button ion-button color="dark" icon-only (tap)="tabs.terminateApp()">
-        <ion-icon class="header-close-button" name="close"></ion-icon>
-      </button> -->
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<div #fixed ion-fixed></div>
-<ion-content padding [ngStyle]="{'margin-top': fixedHeight}">
+<ion-content padding class="page-content home-page-content">
   <div class="waiting-clock" *ngIf="ud.isAppLoaded() && !(dataReady && ud.isHomePageReady())" (tap)="toggleClock()">
     <clock></clock>
   </div>
-  <div class="home-header-container" *ngIf="dataReady && ud.isHomePageReady()">
-    <p class="home-welcome">{{ud.getTechName()}}</p>
-    <p class="home-date">{{today.format('dddd MMM DD YYYY')}} </p>
-  </div>
-  <!-- <ion-card no-lines class="shift-summary" *ngIf="dataReady"> -->
    <ion-card no-lines class="shift-summary" *ngIf="dataReady && ud.isHomePageReady()">
     <ion-card-header class="home-card-header-payroll-period">
       <ion-item class="home-card-header-payroll-period-label-item">
@@ -44,11 +33,6 @@
             <ion-radio [value]="payperiod" (ionSelect)="changedPayrollPeriod(payperiod)"></ion-radio>
           </ion-item>
         </ion-list>
-      <!-- <ion-item class="home-card-header-payroll-period-data-item"> -->
-        <!-- <ion-select class="home-card-header-payroll-period-data-select" [(ngModel)]="period" (ionChange)="changedPayrollPeriod(period)">
-          <ion-option *ngFor="let period of payrollPeriods" [value]="period">{{period.getPayrollPeriodDescription()}}</ion-option>
-        </ion-select> -->
-      <!-- </ion-item> -->
     </ion-card-header>
     <ion-list no-lines no-border class="home-card-body-list">
       <ion-item class="ion-item-button-like"  *ngFor="let shift of period.shifts; let i=index" (tap)="showShiftReports(shift)">
@@ -130,8 +114,6 @@
   </ion-card>
   <p class="home-grid-key-caption" *ngIf="dataReady && ud.isHomePageReady()">{{'letter_code' | translate}}</p>
   <ion-grid center class="home-grid-key" *ngIf="dataReady && ud.isHomePageReady()">
-    <!-- <ion-row class="home-grid-header-row">
-      <ion-col class="" -->
     <ion-row class="home-grid-row">
       <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
       <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
@@ -145,34 +127,5 @@
       <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
     </ion-row>
   </ion-grid>
-    <!-- <ion-row class="home-grid-row">
-      <ion-col col-1 class="home-grid-col1">T</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training' | translate}}</ion-col>
-      <ion-col col-1 offset-1 class="home-grid-col1">Q</ion-col><ion-col col-4 class="home-grid-col4">{{'key_travel' | translate}}</ion-col>
-    </ion-row>
-    <ion-row class="home-grid-row">
-      <ion-col col-1 class="home-grid-col1">M</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_training_and_travel' | translate}}</ion-col>
-      <ion-col col-1 offset-1 class="home-grid-col1">S</ion-col><ion-col col-4 class="home-grid-col4">{{'key_standby_duncan' | translate}}</ion-col>
-    </ion-row>
-    <ion-row class="home-grid-row">
-      <ion-col col-1 class="home-grid-col1">E</ion-col>         <ion-col col-4 class="home-grid-col2">{{'key_sick_day_or_hours' | translate}}</ion-col>
-      <ion-col col-1 offset-1 class="home-grid-col1">H</ion-col><ion-col col-4 class="home-grid-col4">{{'key_holiday' | translate}}</ion-col>
-    </ion-row>
-  </ion-grid> -->
-  <!-- <ion-grid center class="home-grid-key">
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">T</ion-col><ion-col class="home-grid-col2">Training</ion-col></ion-row>
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">Q</ion-col><ion-col class="home-grid-col2">Travel</ion-col></ion-row>
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">M</ion-col><ion-col class="home-grid-col2">Training and Travel</ion-col></ion-row>
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">S</ion-col><ion-col class="home-grid-col2">Standby for Duncan</ion-col></ion-row>
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">E</ion-col><ion-col class="home-grid-col2">Sick Day or Sick Hrs</ion-col></ion-row>
-    <ion-row class="home-grid-row"><ion-col class="home-grid-col1">H</ion-col><ion-col class="home-grid-col2">Holiday</ion-col></ion-row>
-  </ion-grid> -->
-  <!-- <p>
-      T   Training <br>
-      Q   Travel <br>
-      M   Training and Travel <br>
-      S   Standby for Duncan <br>
-      E   Sick Day or Sick Hrs <br>
-      H   Holiday <br>
-  </p> -->
 </ion-content>
 <onsite-tabs></onsite-tabs>
