--- a/src/pages/tech-settings/tech-settings.html
+++ b/src/pages/tech-settings/tech-settings.html
@@ -8,7 +8,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="xtra-top-padding" >
+<ion-content padding class="xtra-top-padding page-content tech-settings-page-content">
   <form [formGroup]="techSettings" *ngIf="techSettingsReady" (ngSubmit)="onSubmit()">
     <ion-list>
       <ion-item class="tech-settings-input-item">
